--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
           </p>
         </div>
         <!-- ul for portfolio -->
-        <div class="uppercase flex flex-row list-none text-white">
+        <!-- <div class="uppercase flex flex-row list-none text-white">
           <ul
             class="flex flex-row gap-7 bg-[#353535] text-[12px] h-4 p-4 hover:bg-[#1dbf73]"
           >
@@ -872,6 +872,45 @@
             <li>App design</li>
             <li>app development</li>
           </ul>
+        </div> -->
+        <div class="portfolio-filters-container mb-8">
+          <ul
+            class="portfolio-filters uppercase flex flex-row list-none text-white bg-[#353535] text-[12px] p-4"
+          >
+            <li
+              class="cursor-pointer px-4 py-2 hover:bg-[#1dbf73] transition-colors duration-200 active"
+            >
+              All
+            </li>
+            <li
+              class="cursor-pointer px-4 py-2 hover:bg-[#1dbf73] transition-colors duration-200"
+            >
+              Web Design
+            </li>
+            <li
+              class="cursor-pointer px-4 py-2 hover:bg-[#1dbf73] transition-colors duration-200"
+            >
+              web development
+            </li>
+            <li
+              class="cursor-pointer px-4 py-2 hover:bg-[#1dbf73] transition-colors duration-200"
+            >
+              App design
+            </li>
+            <li
+              class="cursor-pointer px-4 py-2 hover:bg-[#1dbf73] transition-colors duration-200"
+            >
+              app development
+            </li>
+          </ul>
+        </div>
+
+        <!-- کانتینر آیتم‌های پورتفولیو -->
+        <div
+          id="portfolio-grid"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
+        >
+          <!-- آیتم‌های پورتفولیو اینجا رندر می‌شوند -->
         </div>
       </section>
     </main>
