--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <ul
             class="list-none flex flex-row gap-4 text-white *:hover:text-green-500"
           >
-            <li>HOME</li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="./about.html">ABOUT</a></li>
-            <li>SERVICES</li>
-            <li>PORTFOLIO</li>
-            <li>PRICE</li>
+            <li><a href="./services.html">SERVICES</a></li>
+            <li><a href="./portfolio.html">PORTFOLIO</a></li>
+            <li><a href="./price.html">PRICE</a></li>
             <li>
               <select name="cars">
                 <option value="volvo">Volvo</option>
@@ -173,11 +173,11 @@
           <img class="w-[540px] h-[309px]" src="./src/img/about.jpg" alt="" />
         </div>
         <div class="w-1/2 flex flex-col">
-          <h2
-            class="pt-5 text-[#1dbf73] hover:text-black font-nunito text-[32px] font-bold"
+          <p
+            class="text-[32px] text-[#1dbf73] font-semibold hover:text-gray-800"
           >
             Welcome to Our Site
-          </h2>
+          </p>
           <p class="pb-8">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
             condimentum rutrum ligula. Integer ac porttitor mi. In finibus
@@ -372,6 +372,7 @@
           leo accumsan ullamcorper. Suspendisse leo purus, pellentesque posuere.
         </p>
       </section>
+
       <!-- Our Services -->
       <section class="flex flex-row">
         <div class="flex flex-row justify-between p-7 items-center gap-8">
