--- a/services.html
+++ b/services.html
@@ -47,204 +47,194 @@
         </p>
       </div>
     </section>
-    <section
-      class="flex flex-col gap-4 justify-center items-center p-14 bg-[#f2f2f2]"
-    >
-      <div class="flex flex-col items-center">
-        <p class="text-[32px] text-black font-semibold">ABOUT US</p>
-        <span class="text-[32px] text-black font-bold">---------</span>
-        <p class="text-lg text-[#656565] font-light px-[330px] text-center">
-          Maecenas vel turpis quis lorem aliquam tempus quis non mi.
-          Pellentesque habitant morbi tristique senectus et netus et malesuada
-          fames ac turpis egestas.
-        </p>
-      </div>
-      <div class="flex gap-8 py-8 px-40">
-        <img
-          class="w-[520px] h-[300px] object-fill"
-          src="./src/img/about.jpg"
-        />
-        <div class="flex flex-col gap-4 justify-center items-start">
-          <p
-            class="text-[32px] text-[#1dbf73] font-semibold hover:text-gray-800"
+    <section class="flex flex-col justify-center items-center p-10 gap-3">
+      <h2
+        class="font-semibold text-[38px] border-b-3 border-b-black border-dashed"
+      >
+        Services
+      </h2>
+      <p
+        class="text-wrap w-[600px] text-[#656565] text-center justify-center items-center"
+      >
+        Integer sollicitudin sed nulla non consequat. Nullam vitae erat quis leo
+        accumsan ullamcorper. Suspendisse leo purus, pellentesque posuere.
+      </p>
+    </section>
+
+    <!-- services section start -->
+    <section class="flex flex-row">
+      <div class="flex flex-row justify-between p-7 items-center gap-8">
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
           >
-            Welcome to Our Site
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
           </p>
-          <span class="text-lg text-[#656565] font-light"
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
-            condimentum rutrum ligula. Integer ac porttitor mi. In finibus
-            vehicula aliquet. Vestibulum et velit placerat, pretium lorem id,
-            porttitor libero. Suspendisse scelerisque nec arcu a malesuada.
-            Nulla tempus dictum tristique.</span
+        </div>
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
           >
-          <button
-            class="py-2 px-4 text-3 text-white bg-[#1dbf73] font-light z-30 hover:text-white hover:bg-gray-800 transition-all"
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
+        </div>
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
           >
-            Read More
-          </button>
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
+        </div>
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
         </div>
       </div>
-      <div class="flex gap-8 px-40">
-        <div
-          class="flex flex-col gap-4 bg-white group relative hover:shadow-md"
-        >
-          <img src="./src/img/portfolio-1.jpg" />
-          <div class="flex flex-col gap-4 items-center p-8">
-            <p
-              class="text-[20px] text-gray-800 font-semibold hover:text-[#1dbf73]"
-            >
-              Our Mission
-            </p>
-            <span class="text-[14px] text-[#656565] font-light"
-              >Aenean volutpat, dolor eu finibus rhoncus, elit felis vehicula
-              nunc, ut pulvinar ex diam nec lacus. Phasellus sit amet rhoncus
-              turpis. Aenean tincidunt auctor purus, ac sodales sapien
-              sagittis</span
-            >
-            <button
-              class="py-2 px-4 text-3 text-white bg-[#1dbf73] font-light group-hover:text-white group-hover:bg-gray-800"
-            >
-              Read More
-            </button>
-            <div
-              class="p-2 bg-[#1dbf73] rounded-full absolute bottom-[46%] left-[50%] -translate-1/2 border-4 border-white group-hover:bg-white"
-            >
-              <svg
-                class="group-hover:fill-[#1dbf73]"
-                fill="#ffffff"
-                width="40px"
-                height="40px"
-                viewBox="0 0 256 256"
-                id="Flat"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M205.20361,52.561a11.9831,11.9831,0,0,0-1.76562-1.76575,108.1521,108.1521,0,1,0,1.76562,1.76575ZM170.323,116a43.7392,43.7392,0,0,0-3.91748-9.4353L195.24927,77.721A83.5787,83.5787,0,0,1,211.12915,116ZM148,128a20,20,0,1,1-20-20A20.0226,20.0226,0,0,1,148,128Zm-20,84A84,84,0,1,1,178.27832,60.75049L149.43481,89.594A43.99139,43.99139,0,1,0,170.323,140h40.80615A84.1192,84.1192,0,0,1,128,212Z"
-                />
-              </svg>
-            </div>
-          </div>
+    </section>
+    <section class="flex flex-row">
+      <div class="flex flex-row justify-between p-7 items-center gap-8">
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
         </div>
-        <div
-          class="flex flex-col gap-4 bg-white group relative hover:shadow-md"
-        >
-          <img src="./src/img/vision.jpg" />
-          <div class="flex flex-col gap-4 items-center p-8">
-            <p
-              class="text-[20px] text-gray-800 font-semibold hover:text-[#1dbf73]"
-            >
-              Our Vision
-            </p>
-            <span class="text-[14px] text-[#656565] font-light"
-              >Aenean volutpat, dolor eu finibus rhoncus, elit felis vehicula
-              nunc, ut pulvinar ex diam nec lacus. Phasellus sit amet rhoncus
-              turpis. Aenean tincidunt auctor purus, ac sodales sapien
-              sagittis</span
-            >
-            <button
-              class="py-2 px-4 text-3 text-white bg-[#1dbf73] font-light group-hover:text-white group-hover:bg-gray-800"
-            >
-              Read More
-            </button>
-            <div
-              class="p-3 bg-[#1dbf73] rounded-full absolute bottom-[46%] left-[50%] -translate-1/2 border-4 border-white group-hover:bg-white"
-            >
-              <svg
-                class="group-hover:fill-[#1dbf73]"
-                fill="#ffffff"
-                height="30px"
-                width="30px"
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 512 512"
-                enable-background="new 0 0 512 512"
-                xml:space="preserve"
-              >
-                <path
-                  d="M0,226v32c128,192,384,192,512,0v-32C384,34,128,34,0,226z M256,370c-70.7,0-128-57.3-128-128s57.3-128,128-128
-	        s128,57.3,128,128S326.7,370,256,370z M256,170c0-8.3,1.7-16.1,4.3-23.6c-1.5-0.1-2.8-0.4-4.3-0.4c-53,0-96,43-96,96s43,96,96,96
-	        c53,0,96-43,96-96c0-1.5-0.4-2.8-0.4-4.3c-7.4,2.6-15.3,4.3-23.6,4.3C288.2,242,256,209.8,256,170z"
-                />
-              </svg>
-            </div>
-          </div>
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
+
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
         </div>
-        <div
-          class="flex flex-col gap-4 bg-white group relative hover:shadow-md"
-        >
-          <img src="./src/img/about-objective.jpg" />
-          <div class="flex flex-col gap-4 items-center p-8">
-            <p
-              class="text-[20px] text-gray-800 font-semibold hover:text-[#1dbf73]"
-            >
-              Our Objective
-            </p>
-            <span class="text-[14px] text-[#656565] font-light"
-              >Aenean volutpat, dolor eu finibus rhoncus, elit felis vehicula
-              nunc, ut pulvinar ex diam nec lacus. Phasellus sit amet rhoncus
-              turpis. Aenean tincidunt auctor purus, ac sodales sapien
-              sagittis</span
-            >
-            <button
-              class="py-2 px-4 text-3 text-white bg-[#1dbf73] font-light group-hover:text-white group-hover:bg-gray-800"
-            >
-              Read More
-            </button>
-            <div
-              class="p-3 bg-[#1dbf73] rounded-full absolute bottom-[46%] left-[50%] -translate-1/2 border-4 border-white group-hover:bg-white"
-            >
-              <svg
-                class="group-hover:fill-[#1dbf73]"
-                fill="#ffffff"
-                width="32px"
-                height="32px"
-                viewBox="0 0 32 32"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <title />
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
 
-                <g data-name="Layer 24" id="Layer_24">
-                  <path
-                    d="M10,12H6a1,1,0,0,1-1-1V7A1,1,0,0,1,6,6h4a1,1,0,0,1,1,1v4A1,1,0,0,1,10,12ZM7,10H9V8H7Z"
-                  />
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
+        </div>
+        <div class="items-center flex flex-col">
+          <svg
+            class="fill-green-500"
+            width="100px"
+            height="100px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M2 5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2h-7v2h3a1 1 0 1 1 0 2H8a1 1 0 1 1 0-2h3v-2H4a2 2 0 0 1-2-2V5zm18 11V5H4v11h16z"
+              fill=""
+            />
+          </svg>
 
-                  <path
-                    d="M6,8.47V11h4V8.47a2.11,2.11,0,0,1-2,1A2.11,2.11,0,0,1,6,8.47Z"
-                  />
-
-                  <path
-                    d="M21,15.47V18h4V15.47a2.11,2.11,0,0,1-2,1A2.11,2.11,0,0,1,21,15.47Z"
-                  />
-
-                  <path
-                    d="M6,22.47V25h4V22.47a2.11,2.11,0,0,1-2,1A2.11,2.11,0,0,1,6,22.47Z"
-                  />
-
-                  <path d="M29,10H10a1,1,0,0,1,0-2H29a1,1,0,0,1,0,2Z" />
-
-                  <path d="M6,10H3A1,1,0,0,1,3,8H6a1,1,0,0,1,0,2Z" />
-
-                  <path
-                    d="M10,26H6a1,1,0,0,1-1-1V21a1,1,0,0,1,1-1h4a1,1,0,0,1,1,1v4A1,1,0,0,1,10,26ZM7,24H9V22H7Z"
-                  />
-
-                  <path d="M6,24H3a1,1,0,0,1,0-2H6a1,1,0,0,1,0,2Z" />
-
-                  <path d="M29,24H10a1,1,0,0,1,0-2H29a1,1,0,0,1,0,2Z" />
-
-                  <path
-                    d="M25,19H21a1,1,0,0,1-1-1V14a1,1,0,0,1,1-1h4a1,1,0,0,1,1,1v4A1,1,0,0,1,25,19Zm-3-2h2V15H22Z"
-                  />
-
-                  <path d="M21,17H3a1,1,0,0,1,0-2H21a1,1,0,0,1,0,2Z" />
-
-                  <path d="M29,17H25a1,1,0,0,1,0-2h4a1,1,0,0,1,0,2Z" />
-                </g>
-              </svg>
-            </div>
-          </div>
+          <h4 class="text-center font-semibold"><a href="">Web Design</a></h4>
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium.
+          </p>
         </div>
       </div>
     </section>
