--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
           class="text-white z-50 border-1 border-white px-6 py-4 items-end-safe"
         >
           <a href="./index.html" class="hover:text-[#1dbf73]">Home</a> |
-          <a href="./about.html" class="hover:text-[#1dbf73]">About</a>
+          <a href="./services.html" class="hover:text-[#1dbf73]">Services</a>
         </p>
       </div>
     </section>
