--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           class="text-white z-50 border-1 border-white px-6 py-4 items-end-safe"
         >
           <a href="./index.html" class="hover:text-[#1dbf73]">Home</a> |
-          <a href="./contact.html" class="hover:text-[#1dbf73]">Contact</a>
+          <a href="./portfolio.html" class="hover:text-[#1dbf73]">Portfolio</a>
         </p>
       </div>
     </section>
