--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,15 @@
         </div>
       </div>
       <div class="flex gap-18 px-40 justify-center">
-        <div><img class="w-100 h-full" src="src/img/far.svg" /></div>
+        <div class="w-[100%]">
+          <iframe
+            class="w-full h-full"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26361250.667320687!2d-113.75533773453304!3d36.24128894212527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sbd!4v1574923227698!5m2!1sen!2sbd"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+          ></iframe>
+        </div>
         <div class="flex flex-col bg-white p-8 gap-4 hover:shadow-md">
           <div class="flex gap-4">
             <input
