--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <option value="audi">Audi</option>
               </select>
             </li>
-            <li>CONTACT</li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </div>
       </div>
@@ -1130,6 +1130,131 @@
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
         >
           <!-- آیتم‌های پورتفولیو اینجا رندر می‌شوند -->
+        </div>
+      </section>
+      <!-- contact -->
+      <section class="flex flex-col p-14 bg-[#f2f2f2] gap-8">
+        <div class="flex flex-col items-center">
+          <p class="text-[32px] text-black font-semibold">CONTACT US</p>
+          <span class="text-[32px] text-black font-bold">---------</span>
+          <p class="text-lg text-[#656565] font-light px-[330px] text-center">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+            ullamcorper pharetra ligula nec hendrerit. Ut eu libero nec magna
+            placerat fringilla.
+          </p>
+        </div>
+        <div class="flex gap-4 px-40 justify-center">
+          <div
+            class="flex flex-col py-8 px-8 h-full w-70 bg-white justify-center items-center gap-2 hover:shadow-md"
+          >
+            <svg
+              fill="#1dbf73"
+              width="50px"
+              height="50px"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12,22H12v0a12.816,12.816,0,0,0,7.988-12A7.992,7.992,0,1,0,4.008,10,12.816,12.816,0,0,0,12,22v0ZM10,10a2,2,0,1,1,2,2A2,2,0,0,1,10,10Z"
+              />
+            </svg>
+            <p class="text-[#353535] font-semibold">ADDRESS</p>
+            <p class="text-[#353535] font-light">
+              Your Location, City, Country
+            </p>
+          </div>
+          <div
+            class="flex flex-col py-8 px-8 h-full w-70 bg-white justify-center items-center gap-2 hover:shadow-md"
+          >
+            <svg
+              width="50px"
+              height="50px"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+            >
+              <path
+                fill="#1dbf73"
+                d="M20 16v4c-2.758 0-5.07-.495-7-1.325-3.841-1.652-6.176-4.63-7.5-7.675C4.4 8.472 4 5.898 4 4h4l1 4-3.5 3c1.324 3.045 3.659 6.023 7.5 7.675L16 15l4 1z"
+              />
+              <path
+                stroke="#1dbf73"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M13 18.675c1.93.83 4.242 1.325 7 1.325v-4l-4-1-3 3.675zm0 0C9.159 17.023 6.824 14.045 5.5 11m0 0C4.4 8.472 4 5.898 4 4h4l1 4-3.5 3z"
+              />
+            </svg>
+            <p class="text-[#353535] font-semibold">PHONE NUMBER</p>
+            <p class="text-[#353535] font-light">+123-456-789</p>
+          </div>
+          <div
+            class="flex flex-col py-8 px-8 h-full w-70 bg-white justify-center items-center gap-2 hover:shadow-md"
+          >
+            <svg
+              fill="#1dbf73"
+              xmlns="http://www.w3.org/2000/svg"
+              width="50px"
+              height="50px"
+              viewBox="0 0 52 52"
+              enable-background="new 0 0 52 52"
+              xml:space="preserve"
+            >
+              <g>
+                <path
+                  d="M24.9,30.1c0.6,0.6,1.5,0.6,2.1,0l22.6-21C50,8.3,49.9,7,48.3,7L3.6,7.1c-1.2,0-2.2,1.1-1.3,2.1L24.9,30.1z
+		"
+                />
+                <path
+                  d="M50,17.3c0-1-1.2-1.6-2-0.9L30.3,32.7c-1.2,1.1-2.7,1.7-4.3,1.7s-3.1-0.6-4.3-1.6L4.1,16.4
+		c-0.8-0.7-2-0.2-2,0.9C2,17,2,40,2,40c0,2.2,1.8,4,4,4h40c2.2,0,4-1.8,4-4C50,34,50,21.8,50,17.3z"
+                />
+              </g>
+            </svg>
+            <p class="text-[#353535] font-semibold">EMAIL</p>
+            <p class="text-[#353535] font-light">sudeepacharjeegp@gmail.com</p>
+          </div>
+        </div>
+        <div class="flex gap-18 px-40 justify-center">
+          <div class="w-[100%]">
+            <iframe
+              class="w-full h-full"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26361250.667320687!2d-113.75533773453304!3d36.24128894212527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sbd!4v1574923227698!5m2!1sen!2sbd"
+              frameborder="0"
+              style="border: 0"
+              allowfullscreen=""
+            ></iframe>
+          </div>
+          <div class="flex flex-col bg-white p-8 gap-4 hover:shadow-md">
+            <div class="flex gap-4">
+              <input
+                class="border-1 w-40 border-gray-300 p-2 focus:outline-[#1dbf73]"
+                type="text"
+                placeholder="Your Name"
+              />
+              <input
+                class="border-1 w-40 border-gray-300 p-2 focus:outline-[#1dbf73]"
+                type="email"
+                placeholder="Your Email"
+              />
+            </div>
+            <div class="flex flex-col gap-4 items-start">
+              <input
+                class="border-1 w-full border-gray-300 p-2 focus:outline-[#1dbf73]"
+                type="text"
+                placeholder="Subject"
+              />
+              <textarea
+                class="border-1 w-full h-32 border-gray-300 p-2 focus:outline-[#1dbf73]"
+                placeholder="Message"
+              ></textarea>
+              <button
+                class="py-2 px-4 text-3 text-white bg-[#1dbf73] font-light z-30 hover:text-white hover:bg-gray-800 transition-all"
+              >
+                Send Message
+              </button>
+            </div>
+          </div>
         </div>
       </section>
       <footer class="flex flex-col">
