--- a/contact.html
+++ b/contact.html
@@ -22,34 +22,14 @@
         <li><a href="./portfolio.html">PORTFOLIO</a></li>
         <li><a href="./price.html">PRICE</a></li>
         <li class="flex gap-2 items-center relative">
-          <a id="selectBar" href=".">DROPDOWN</a>
-          <svg
-            class="rotate-90"
-            width="18px"
-            height="18px"
-            viewBox="0 0 48 48"
-            version="1"
-            xmlns="http://www.w3.org/2000/svg"
-            enable-background="new 0 0 48 48"
-          >
-            <polygon
-              class="group-hover:fill-[#1dbf73]"
-              fill="white"
-              points="17.1,5 14,8.1 29.9,24 14,39.9 17.1,43 36,24"
-            />
-          </svg>
-          <ul
-            id="showSelectBar"
-            class="flex flex-col show bg-white absolute top-10 right-0 w-48 py-4 pr-8 pl-4 gap-2 *:text-[14px] *:text-black *:hover:text-[#1dbf73]"
-          >
-            <li>Dropdown Menu</li>
-            <li>Dropdown Menu</li>
-            <li>Dropdown Menu</li>
-            <li>Dropdown Menu</li>
-            <li>Dropdown Menu</li>
-          </ul>
+          <select name="cars">
+            <option value="volvo">Drop Down</option>
+            <option value="saab">Drop Down</option>
+            <option value="mercedes">Drop Down</option>
+            <option value="audi">Drop Down</option>
+          </select>
         </li>
-        <li><a href=".">CONTACT</a></li>
+        <li><a href="./contact.html">CONTACT</a></li>
       </ul>
     </header>
     <section class="relative">
