--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <option value="audi">Audi</option>
               </select>
             </li>
-            <li>CONTACT</li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </div>
       </div>
