--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <li><a href="./price.html">PRICE</a></li>
             <li>
               <select name="cars">
-                <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
+                <option value="volvo">Drop Down</option>
+                <option value="saab">Drop Down</option>
+                <option value="mercedes">Drop Down</option>
+                <option value="audi">Drop Down</option>
               </select>
             </li>
             <li><a href="./contact.html">CONTACT</a></li>
