--- a/price.html
+++ b/price.html
@@ -24,13 +24,13 @@
             <li><a href="./price.html">PRICE</a></li>
             <li>
               <select name="cars">
-                <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
+                <option value="volvo">Drop Down</option>
+                <option value="saab">Drop Down</option>
+                <option value="mercedes">Drop Down</option>
+                <option value="audi">Drop Down</option>
               </select>
             </li>
-            <li>CONTACT</li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </div>
       </div>
