--- a/contact.html
+++ b/contact.html
@@ -229,10 +229,10 @@
             <p class="text-[18px] text-white font-light">Your City</p>
             <p class="text-[18px] text-white font-light">Your Country</p>
             <p class="text-[18px] text-white font-light">
-              <span class="font-bold">Phone:</span> +123-456-7890
+              <span class="font-bold">Phone:</span> +989361306835
             </p>
             <p class="text-[18px] text-white font-light">
-              <span class="font-bold">Email:</span> info@example.com
+              <span class="font-bold">Email:</span>majid.live@gmail.com
             </p>
           </div>
           <div class="flex gap-3">
@@ -337,11 +337,11 @@
       </section>
       <section class="flex flex-col justify-center items-center bg-black p-8">
         <p class="text-[18px] text-[#656565]">
-          © Copyright <span class="text-[#1dbf73]">Your Site Name</span>. All
-          Rights Reserved
+          © Copyright <span class="text-[#1dbf73]">Go Green</span>. All Rights
+          Reserved
         </p>
         <p class="text-[18px] text-[#656565]">
-          Template By <span class="text-[#1dbf73]">@SudeepAcharjee</span>
+          Template By <span class="text-[#1dbf73]">@Mj</span>
         </p>
       </section>
     </footer>
