--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,10 +28,10 @@
             <li><a href="./price.html">PRICE</a></li>
             <li>
               <select name="cars">
-                <option value="volvo">Drop Down</option>
-                <option value="saab">Drop Down</option>
-                <option value="mercedes">Drop Down</option>
-                <option value="audi">Drop Down</option>
+                <option value="volvo">Design</option>
+                <option value="saab">PWA</option>
+                <option value="mercedes">React</option>
+                <option value="audi">Next</option>
               </select>
             </li>
             <li><a href="./contact.html">CONTACT</a></li>
